process to valdate and update data